examples/test/testpolicy15666.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15666
  namespace: namespace131
spec:
  podSelector:
    matchLabels:
      key30: value42
      key37: value47
      key36: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value30
      podSelector:
        matchLabels:
          key46: value35
          key12: value12
